# ppx_odoc_of_gospel

./: .ocamlformat-ignore  README.md  dune-project  ppx_odoc_of_gospel.opam
example/: dune  my_lib.ml  my_lib.mli
src/: dune  ppx_odoc_of_gospel.ml
test/: dune  odoc_of_gospel.expected.mli  odoc_of_gospel.mli
