(executable
 (name pp)
 (modules pp)
 (libraries ppx_odoc_of_gospel ppxlib))

(rule
 (targets odoc_of_gospel.actual.mli)
 (deps
  (:pp pp.exe)
  (:input odoc_of_gospel.mli))
 (action
  (run ./%{pp} --intf %{input} -pp "gospel pps" -o %{targets})))

(rule
 (alias runtest)
 (action
  (diff odoc_of_gospel.expected.mli odoc_of_gospel.actual.mli)))
